# hdospray

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  HD OSPRay TPP File 01_26_21 JAS.txt  LICENSE  README.md  third-party-programs.txt
.github/workflows/: main.yml  release.yml
cmake/defaults/: CXXDefaults.cmake  Packages.cmake  Version.cmake
cmake/macros/: Private.cmake
cmake/modules/: houdini.cmake  macros.cmake  package.cmake
doc/: Makefile  compilation.md  documentation.md  examples.md  gallery.md  legal.md  news.md  overview.md  readme_head.md  teaser.html  webtemplate.html
hdOSPRay/: CMakeLists.txt  api.h  basisCurves.cpp  basisCurves.h  camera.cpp  camera.h  config.cpp  config.h  context.h  discovery.cpp  instancer.cpp  instancer.h  material.cpp  material.h  mesh.cpp  mesh.h  parser.cpp  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  rendererPlugin.cpp  rendererPlugin.h  sampler.cpp  sampler.h  texture.cpp  texture.h
hdOSPRay/lights/: cylinderLight.cpp  cylinderLight.h  diskLight.cpp  diskLight.h  distantLight.cpp  distantLight.h  domeLight.cpp  domeLight.h  light.cpp  light.h  rectLight.cpp  rectLight.h  sphereLight.cpp  sphereLight.h
pxr/imaging/plugin/hdOSPRay/: CMakeLists.txt  api.h  basisCurves.cpp  basisCurves.h  camera.cpp  camera.h  config.cpp  config.h  context.h  instancer.cpp  instancer.h  material.cpp  material.h  mesh.cpp  mesh.h  overview.dox  pch.h  plugInfo.json  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  rendererPlugin.cpp  rendererPlugin.h  sampler.cpp  sampler.h  texture.cpp  texture.h
pxr/imaging/plugin/hdOSPRay/lights/: cylinderLight.cpp  cylinderLight.h  diskLight.cpp  diskLight.h  distantLight.cpp  distantLight.h  domeLight.cpp  domeLight.h  light.cpp  light.h  rectLight.cpp  rectLight.h  sphereLight.cpp  sphereLight.h
pxr/imaging/plugin/hdOSPRay/testenv/: testHdOSPRay.cpp
scripts/: clang-format.sh
scripts/build_ci/: linux-kw.sh  linux.sh  osx.sh  win.bat
scripts/build_gitlab/: linux-kw.sh  linux.sh
scripts/release_ci/: linux.sh  linux_houdini.sh  macosx.sh  macosx_houdini.sh  macosx_notarization.sh  win.ps1  win_houdini.ps1
scripts/run_ci/: compare.sh  validation.sh
scripts/run_gitlab/: validation.sh
scripts/scan_ci/: kw-check-issues.sh  kw-gen-report.sh
scripts/superbuild/: CMakeLists.txt
scripts/superbuild/cmake/: dep_embree.cmake  dep_ispc.cmake  dep_oidn.cmake  dep_openvkl.cmake  dep_rkcommon.cmake  ep_ospray.cmake  ep_usd.cmake
scripts/superbuild/patches/: OSPRay_superbuild_CMakeLists.patch  OSPRay_superbuild_OIDN.patch
testing/: CMakeLists.txt
usd-superbuild/: CMakeLists.txt
usd-superbuild/cmake/: Boost.cmake  FindPySide.cmake  Glew.cmake  OpenColorIO.cmake  OpenEXR.cmake  OpenImageIO.cmake  OpenSubdiv.cmake  OpenVDB.cmake  Ptex.cmake  TBB.cmake  get_ispc.cmake  hdf5.cmake  jpeg.cmake  macros_and_options.cmake  png.cmake  tiff.cmake  zlib.cmake
